# androidapp

.github/workflows/: main.yml
gestures-app/: buildozer.spec  pyproject.toml
gestures-app/.buildozer/: state.db
gestures-app/.buildozer/android/app/: main.py
gestures-app/.github/workflows/: build.yml
