[project]
name = "gestures-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Krishna Kumar",email = "112171502+mrlearner1606@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kivy (>=2.3.1,<3.0.0)",
    "plyer (>=2.1.0,<3.0.0)",
    "buildozer (>=1.5.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "gestures_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
